feat: Phase 14 Group C — procurement activates ServiceModule.migrations()
Same pattern as meetings/requirements: 4 changelog paths move into
ProcurementServiceModule.migrations(); module.yml + ProcurementModule +
ProcurementDeployment go away; service-registration code inlines into
ProcurementApp.registerProcurementService(); ProcurementConfiguration
becomes a plain @Configuration with the settings bean.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>